<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, TipCalculator</string>
    <string name="app_name">Tip Calculator</string>
<string name="calculate">Calculate Tip</string>
<string name="bill_label">Total Bill: $ </string>
<string name="percent">Percent Tip</string>

<string name="percentage_label">Or enter a percentage: </string>
<string name="bill">Total Bill</string>

<string name="spinner_1_prompt">Choose a tip amount</string>
</resources>
