<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
 <TextView  
    android:layout_width="80px" 
    android:layout_height="wrap_content" 
    android:text="@string/bill_label"
    android:textSize="15sp"
    />
<EditText  
    android:id="@+id/Text1"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:hint="@string/bill"
    android:numeric="decimal"
    android:textSize="15sp"
    android:gravity="right"
    />
</LinearLayout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
<Spinner
	android:id="@+id/Spinner1"
	android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:drawSelectorOnTop="true"
    android:prompt="@string/spinner_1_prompt"
	/>
</LinearLayout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
 <TextView  
    android:layout_width="80px" 
    android:layout_height="wrap_content" 
    android:text="@string/percentage_label"
    android:textSize="15sp"
    />
<EditText
    android:id="@+id/Text2"  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:hint="@string/percent"
    android:textSize="15sp"
    android:gravity="right" 
    android:numeric="decimal"
    />
</LinearLayout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
<Button
    android:id="@+id/Button"
    android:text="@string/calculate"
    android:layout_width="150px"
    android:layout_height="60px"
/>
 <TextView
    android:id="@+id/ResultText"  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:textSize="15sp"
    android:text="Answer is here"
    android:gravity="right"
  />
</LinearLayout>
</LinearLayout>
